fixed horizontal scrolling

--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -1,3 +1,7 @@
+html, body {
+    overflow-x: hidden;
+  }
+
 @media (max-width: 576px){
     .mobilemargin{
     margin-left: 2rem;
